--- a/gc.html
+++ b/gc.html
@@ -15,37 +15,38 @@
             <h2>Assignments</h2>
             <div class="grades">
                 <div class="grade-entry">
-                    <input type="text" name="name" placeholder="Enter name...">
-                    <input type="text" name="grade" placeholder="Enter grade...">
-                    <input type="text" name="weight" placeholder="Enter weight...">
+                    <input type="text" name="assignment-name" placeholder="Enter name...">
+                    <input type="text" name="assignment-grade" placeholder="Enter grade...">
+                    <input type="text" name="assignment-weight" placeholder="Enter weight...">
                 </div>
             </div>
-            <button class="add-button" onclick="addGradeInput('assignment-grades')">Add Assignment</button>
+            <button class="add-button" onclick="addGradeInput('assignment')">Add Assignment</button>
         </div>
 
         <div class="quiz-grades">
             <h2>Quizzes</h2>
             <div class="grades">
                 <div class="grade-entry">
-                    <input type="text" name="name" placeholder="Enter name...">
-                    <input type="text" name="grade" placeholder="Enter grade...">
-                    <input type="text" name="weight" placeholder="Enter weight...">
+                    <input type="text" name="quiz-name" placeholder="Enter name...">
+                    <input type="text" name="quiz-grade" placeholder="Enter grade...">
+                    <input type="text" name="quiz-weight" placeholder="Enter weight...">
                 </div>
             </div>
-            <button class="add-button" onclick="addGradeInput('quiz-grades')">Add Quiz</button>
+            <button class="add-button" onclick="addGradeInput('quiz')">Add Quiz</button>
         </div>
 
         <div class="final-grades">
             <h2>Final</h2>
             <div class="grades">
                 <div class="grade-entry">
-                    <input type="text" name="name" placeholder="Enter name...">
-                    <input type="text" name="grade" placeholder="Enter grade...">
-                    <input type="text" name="weight" placeholder="Enter weight...">
+                    <input type="text" name="final-name" placeholder="Enter name...">
+                    <input type="text" name="final-grade" placeholder="Enter grade...">
+                    <input type="text" name="final-weight" placeholder="Enter weight...">
                 </div>
             </div>
-            <button class="add-button" onclick="addGradeInput('final-grades')">Add Final</button>
+            <button class="add-button" onclick="addGradeInput('final')">Add Final</button>
         </div>
     </div>
+    <button class="calculate-button" onclick="calculateGrade()">Calculate</button>
 </body>
-</html>
+</html> 
