Add rounding ru style

--- a/gc.html
+++ b/gc.html
@@ -13,6 +13,7 @@
     <button class="format-button" onclick="changeFormat(0.1)">Display as Decimal</button>
     <button class="format-button" onclick="changeFormat(1)">Display as Part of 10</button>
     <button class="format-button" onclick="changeFormat(10)">Display as Part of 100</button>
+    <button class="format-button" onclick="rounding()">Round</button>
     </div>
     <div class="input-box">
         <div class="assignment-grades">
