--- a/gc.html
+++ b/gc.html
@@ -10,10 +10,10 @@
 <body> 
     <h1 onclick="location.reload()">Grade Calculator</h1>
     <div class="format">
-    <button class="format-button" onclick="changeFormat(0.1)">Display as Decimal</button>
-    <button class="format-button" onclick="changeFormat(1)">Display as Part of 10</button>
-    <button class="format-button" onclick="changeFormat(10)">Display as Part of 100</button>
-    <button class="format-button" id="round-button" onclick="rounding()">Round</button>
+        <button class="format-button" onclick="changeFormat(0.1)">Display as Decimal</button>
+        <button class="format-button" onclick="changeFormat(1)">Display as Part of 10</button>
+        <button class="format-button" onclick="changeFormat(10)">Display as Part of 100</button>
+        <button class="format-button" id="round-button" onclick="rounding()">Round</button>
     </div>
     <div class="input-box">
         <div class="assignment-grades">
@@ -33,7 +33,6 @@
                 <button class="add-button" onclick="addGradeInput('assignment')">Add</button>
             </div>
         </div>
-
         <div class="quiz-grades">
             <h2>Quizzes</h2>
             <div class="grades">
@@ -51,7 +50,6 @@
                 <button class="add-button" onclick="addGradeInput('quiz')">Add</button>
             </div>
         </div>
-
         <div class="exam-grades">
             <h2>Exams</h2>
             <div class="grades">
@@ -70,11 +68,10 @@
             </div>
         </div>
     </div>
-
     <div class="result-buttons">
         <button class="reset-button" onclick="reset()">Reset</button>
         <button class="calculate-button" onclick="calculateGrade()">Calculate Grade</button>
-        <button class="calculate-button" onclick="calcGradeNeeded()">Calculate Grade Needed In Final</button>
+        <button class="calculate-button" id="gradeneeded-button" onclick="calcGradeNeeded()">Calculate Grade Needed In Final</button>
     </div>
     <div class="result">
         <p>Result: <span id="number-grade"></span><span id="letter-grade"></span></p>  
